--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -9,12 +9,19 @@ html(lang="en")
     body 
         header
             h1 Node
-        main
-            form#nickname
-                input(type="text", placeholder="Nickname", required)
-                button Save
-            ul
-            form#message
-                input(type="text", placeholder="write a message", required)
-                button Send
+        main 
+            div#welcome 
+                form
+                    input(placeholder="room name", required, type="text") 
+                    button Enter Room
+            div#room
+                h3
+                ul
+                form#name
+                    input(placeholder="nickname", required, type="text") 
+                    button Save
+                form#msg
+                    input(placeholder="message", required, type="text") 
+                    button Send
+        script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
